Full PDC (1.19.4-1.20.1) (#714)
Switches all of CrazyEnchantments to using PDC with some new features related to Transmog scrolls, Blast fixes.